# embassy-scd41-sensor

./: Cargo.toml  README.md  rust-toolchain.toml
examples/: read-scd41-sensor-rp.rs
src/: lib.rs  scd41_rp.rs
