[package]
name = "embassy-bme280-sensor"
version = "0.1.0"
edition = "2024"
authors = ["Mark Berner"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mark2b/embassy-bme280-sensor"
description = "BME280 sensor driver for the Embassy async runtime"
readme = "README.md"

[features]
default = ["rp2040"]
rp2040 = ["dep:embassy-rp"]
examples = ["dep:defmt", "dep:defmt-rtt", "dep:panic-probe"]

[[example]]
name = "read-bme280-sensor-rp"
path = "examples/read-bme280-sensor-rp.rs"
required-features = ["rp2040", "examples"]

[lib]
name = "embassy_bme280_sensor"
path = "src/lib.rs"

[dependencies]
cortex-m-rt = "0.7"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.8.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"], optional = true }
defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
panic-probe = { version = "1", features = ["print-defmt"], optional = true }
embedded-hal-async = "1.0.0"

